--- a/Android/NO2V1/app/src/main/AndroidManifest.xml
+++ b/Android/NO2V1/app/src/main/AndroidManifest.xml
@@ -19,15 +19,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-
+        android:name=".App"
         android:theme="@style/CustomTheme">
+
+        <service android:name=".Foreground" />
+
         <activity android:name=".MainActivity">
-
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
