--- a/Android/Inodos/app/build.gradle
+++ b/Android/Inodos/app/build.gradle
@@ -30,7 +30,9 @@ android {
 
 dependencies {
     def work_version = "2.4.0"
-    implementation 'no.nordicsemi.android.support.v18:scanner:1.4.2'
+
+    //compile 'com.google.android.gms:play-services-nearby:17.0.0'
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -40,6 +42,9 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-gcm:$work_version"
     implementation 'io.realm:android-adapters:3.1.0'
+
+    //implementation 'no.nordicsemi.android.support.v18:scanner:1.4.2'
 }
 
 apply plugin: 'realm-android'
+//apply plugin: 'com.android.application'
