--- a/Android/Inodos/app/build.gradle
+++ b/Android/Inodos/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.application'
-    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -28,26 +27,32 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'realm-android'
 
 dependencies {
-    implementation 'com.google.firebase:firebase-firestore:22.0.0'
-    implementation platform('com.google.firebase:firebase-bom:26.0.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    def work_version = "2.4.0"
 
-    //compile 'com.google.android.gms:play-services-nearby:17.0.0'
+
+
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
+    def work_version = "2.4.0"
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.google.android.gms:play-services-basement:17.5.0'
+
+
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    //testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-gcm:$work_version"
     implementation 'io.realm:android-adapters:3.1.0'
 
-    //implementation 'no.nordicsemi.android.support.v18:scanner:1.4.2'
+
 }
 
-apply plugin: 'realm-android'
