creacion de una clase Singleton para compartir datos entre activities

--- a/Android/Inodos/app/src/main/AndroidManifest.xml
+++ b/Android/Inodos/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
@@ -43,6 +44,7 @@
             android:label="MonitorService"
             android:enabled="true"
             android:exported="true">
+
         </service>
 
         <receiver android:name="es.upv.inodos.receivers.BootCompletedReceiver"
