--- a/Android/Inodos/app/build.gradle
+++ b/Android/Inodos/app/build.gradle
@@ -31,14 +31,12 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'realm-android'
 
 dependencies {
+    //implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
 
-
-
-    implementation 'com.google.firebase:firebase-firestore:22.0.0'
     def work_version = "2.4.0"
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
-    implementation 'com.google.firebase:firebase-analytics'
-
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.android.gms:play-services-basement:17.5.0'
 
 
