--- a/Android/Inodos/app/build.gradle
+++ b/Android/Inodos/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "es.upv.inodos"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -31,13 +31,18 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'realm-android'
 
 dependencies {
+    def work_version = "2.4.0"
     //implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
 
-    def work_version = "2.4.0"
+
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.android.gms:play-services-basement:17.5.0'
+
 
 
 
