--- a/Android/Inodos/app/src/main/AndroidManifest.xml
+++ b/Android/Inodos/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
@@ -64,7 +65,11 @@
             </intent-filter>
         </receiver>
 
+        <service
+            android:name=".services.DetectedActivitiesIntentService"
+            android:exported="false" />
 
+        <service android:name=".services.BackgroundDetectedActivitiesService"></service>
 
 
     </application>
